# adipo_finder

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
adipo_finder/: __init__.py  evaluation.py  evaluation_plots.R  features.py  model.py  new_adipofinder_code.py  pipeline.py  plotting.py  segmentation.py  utils.py
adipo_finder/data/: trained_model_main.pth  trained_model_scaler.pkl
adipo_finder/notebooks/: assemble_prediction_performance.ipynb  export_features.ipynb  new_adipofinder_predict_all.ipynb  new_adipofinder_train_and_process_all.ipynb  process_ground_truth_images.ipynb
tests/: conftest.py  test_evaluation.py  test_features.py  test_model.py  test_pipeline.py  test_plotting.py  test_segmentation.py  test_utils.py
