[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adipo_finder"
version = "0.1.0"
description = "A package to identify adipocytes from segmentation masks. Developed using IMC data on BM biopsies, with correct parametrization it may work on other datasets."
readme = "README.md"
authors = [{name = "Jacopo Umberto Verga"}]
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "pandas",
    "scanpy",
    "squidpy",
    "matplotlib",
    "anndata",
    "scikit-image",  # `skimage` is actually `scikit-image`
    "scipy",
    "scikit-learn"
]

[project.urls]
"Homepage" = "https://github.com/VergaJU/adipo_finder"
"Repository" = "https://github.com/VergaJU/adipo_finder"

[tool.setuptools.packages.find]
where = ["."]
=